--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.2"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
